# hpl-spec

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
audit_H/: README.md
axioms_H/: README.md
backends_H/: README.md
config/: papas_policy.yaml
data_H/: README.md
docs/: UNIVERSE_INDEX.md
dynamics_H/: README.md
emergence_H/: README.md
examples/: momentum_trade.hpl
infra_H/: README.md
observers_H/: README.md
runtime_H/: README.md
tests/: test_agent_governance_demo.py  test_anchor_generator.py  test_anchor_signing.py  test_axiomatic_validation.py  test_axioms_validator_extended.py  test_budget_exhaustion.py  test_bundle_constraint_inversion_roles.py  test_bundle_delta_s_roles.py  (+85 more)
tools/hpl-agent/: .env.example  .gitignore  README.md  pyproject.toml
tools/hpl-agent/hpl_agent/: cli.py
tools/hpl-agent/hpl_agent/accelerator/: gap_analyzer.py  generator.py  scanner.py  validator.py
tools/hpl-agent/hpl_agent/agent/: assistant.py  conversation.py  system_prompt.py
tools/hpl-agent/hpl_agent/ci/: audit_log.py  evidence_chain.py  governance_agent.py  merkle.py  signer.py
tools/hpl-agent/hpl_agent/ctih/: child_agent.py  consumption_witness.py  parent_scheduler.py  token_tree.py
tools/hpl-agent/hpl_agent/harness/: client.py  config.py  engine.py  session.py
tools/hpl-agent/hpl_agent/hpl/: bridge.py  models.py
tools/hpl-agent/hpl_agent/memory/: budget.py  compressor.py  demo.py  manager.py  store.py
tools/hpl-agent/hpl_agent/tools/: evidence_tools.py  hpl_tools.py  registry.py  spec_tools.py
(+247 files in other folders)
