[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hpl-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "cryptography>=42.0",
    "typer>=0.12",
    "pynacl>=1.5.0",
]

[project.scripts]
hpl-agent = "hpl_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["hpl_agent"]
